--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # Next Auth
-NEXTAUTH_URL="http://localhost:3001"
+NEXTAUTH_URL="http://localhost:3000" # This is the base url for next-auth
 NEXTAUTH_SECRET="" # openssl rand -base64 32
 
 # Database urls
@@ -15,4 +15,4 @@ SMTP_PROVIDER_API_KEY=""
 SMTP_SENDER_EMAIL="email@simpsonresearch.ca"
 
 # Domain config
-NEXT_PUBLIC_BASE_URL="http://localhost:3001" # This is the base url for the frontend
+NEXT_PUBLIC_BASE_URL="http://localhost:3000" # This is the base url for the frontend
